--- a/hybridse/examples/toydb/src/CMakeLists.txt
+++ b/hybridse/examples/toydb/src/CMakeLists.txt
@@ -59,6 +59,7 @@ if (TESTING_ENABLE AND EXAMPLES_TESTING_ENABLE)
         file(RELATIVE_PATH RELATIVE_TEST_PATH ${TEST_CPP_SOURCE_DIR} ${TEST_SCRIPT})
         get_filename_component(TEST_TARGET_DIR ${RELATIVE_TEST_PATH} DIRECTORY)
         get_filename_component(TEST_TARGET_NAME ${RELATIVE_TEST_PATH} NAME_WE)
+        set(TEST_TARGET_NAME "toydb_${TEST_TARGET_NAME}")
         set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${TEST_TARGET_DIR})
         add_executable(${TEST_TARGET_NAME} ${TEST_SCRIPT}
                 ${PROJECT_SOURCE_DIR}/src/testing/test_base.cc
