--- a/hybridse/src/benchmark/CMakeLists.txt
+++ b/hybridse/src/benchmark/CMakeLists.txt
@@ -55,7 +55,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(hybridse_bm DEPENDS ${BENCHMARK_TARGET_LIST})
 
 # bm unittests
-if (TESTING_ENABLE AND CORE_TESTING_ENABLE)
+if (TESTING_ENABLE AND HYBRIDSE_TESTING_ENABLE)
     set(TEST_CPP_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
     foreach(TEST_SCRIPT ${BENCHMARK_TEST_FILE_LIST})
         file(RELATIVE_PATH RELATIVE_TEST_PATH ${TEST_CPP_SOURCE_DIR} ${TEST_SCRIPT})
