--- a/cases/plan/simple_query.yaml
+++ b/cases/plan/simple_query.yaml
@@ -359,4 +359,4 @@ cases:
   - id: load_data
     desc: load data plan
     sql: LOAD DATA INFILE 'nonexistent.csv' into table nonexistent_db.nonexistent_t options(format='csv', foo='bar');
-    mode: runner-unsupport
+    mode: runner-unsupport, request-unsupport
