--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -6,6 +6,10 @@ server.io_threads=4
 zookeeper.cluster=172.24.4.55:12200
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
+zookeeper.connection_Timeout=5000
+zookeeper.max_retries=10
+zookeeper.base_sleep_time=1000
+zookeeper.max_connect_waitTime=30000
 
 hive.metastore.endpoint=thrift://127.0.0.1:9083
 
