build: manage thirdparty & zetasql via cmake (#594)
* build: create cmake sub directory in third-party

* build(hybridse): adopt third-party cmake module

* build: add thirdparty.sh

* build(hybridse): update scripts

* build: fix openmldb build

* build(third-party): add hybridsql asserts

* revert: scripts in steps

* fix: init_env.sh

* fix: init_env.sh

* build(cmake): update third-party module

* build: add global makefile

* build: update hybridse ci

* ci: update cicd.yaml

* ci: fix build

* fix: Makefile

* ci: fix cicd.yaml

* build: resolve #614

* ci: fix cicd.yaml

delete thirdparty build directory to save space

* chore: update comments

* build: fix Makefile

* docs: add third-party readme

* docs: update compile document

* chore: add a TODO note in Makefile

* chore: update gitignore

* wow

* build: update compile steps

- more information building third-party
- run maven in batch mode when on CI environment
- configure javadoc plugin: set 'quiet' to true

* build: tweak some maven plugin options

- javadoc plugin: silent = true
- git commit plugin: verbose = false

* build: set default build type to RelWithDebInfo

workaround to #748

* fix compile

* ci: fix environment variable

* feat: resolving #625

add hybridse to root CMakeLists.txt

* fix(makefile): configure depends on thirdparyt

* build: set MAVEN_FLAGS in hybridse as well

* docs: update compile and third-party README

* build: cleanup scripts

* fix: java coverage

* build: rm zetasql precompiled for arm64

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@
 *.app
 # idea
 *.class
-java/target
 *.idea
 *.iml
 *.DS_store
@@ -47,8 +46,7 @@ build
 build_mac
 thirdparty*/
 thirdsrc
-.vscode/
-onebox/*.log
+**/*.log
 onebox/*binlogs*
 onebox/*bin*
 onebox/logs
@@ -66,20 +64,35 @@ src/version.h
 src/config.h
 java/openmldb-native/src/main/resources
 java/openmldb-native/src/main/java
-java/openmldb-native/target/
-java/openmldb-jdbc/target/
+java/openmldb-common/src/main/java/com/_4paradigm/openmldb/proto/
 java/openmldb-import/src/main/java/com/_4paradigm/openmldb/proto/
 java/openmldb-nearline-tablet/src/main/java/com/_4paradigm/openmldb/proto/
 java/openmldb-taskmanager/src/main/java/com/_4paradigm/openmldb/proto/
 python/logs
 /python/test/*.xml
 
-.vscode/settings.json
+**/target/
+**/.settings/
+**/.classpath
+**/.project
+**/.factorypath
+**/.cache/
+
+**/.vscode/
+**/.metals/
+**/.bloop/
 
 # ignore openmldb release dir & pkg
 /openmldb-*
 
 /cmake-*
+
+**/.deps/
+
+**/compile_commands.json
+**/pom.xml.versionsBackup
+**/dependency-reduced-pom.xml
+**/scalastyle-output.xml
 
 # test
 logs
