--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -11,7 +11,6 @@ on:
 
 env:
   GIT_SUBMODULE_STRATEGY: recursive
-  HYBRIDSE_SOURCE: local
 
 jobs:
   build_and_cpp_ut:
@@ -22,28 +21,33 @@ jobs:
       OS: linux
     steps:
       - uses: actions/checkout@v2
-      - name: build
-        # -e can't catch the error when the command is a part of list-constructs, so we should add `|| exit`
+      - name: setup thirdparty
         run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
+          make thirdparty
+
+      - name: prepare release
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
             VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
-            bash steps/prepare_release.sh $VERSION
-          fi
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) && cd ../ || exit
-          rm -rf thirdparty
+            VERSION=${VERSION#v}
+            bash steps/prepare_release.sh "$VERSION"
+
+      - name: build
+        run: |
+          make build SQL_PYSDK_ENABLE=OFF SQL_JAVASDK_ENABLE=OFF TESTING_ENABLE=ON
+          # GitHub runner disk space is limited
+          # delete thirdparty build directory($ROOT/.deps/) to save disk space
+          make thirdpartybuild-clean
 
       - name: pack OpenMLDB
         if: ${{ github.event_name == 'push' }}
         run: |
           VERSION="snapshot"
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
+          if [[ ${{ github.ref }} == "refs/tags/v"* ]]; then
             VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
+            VERSION=${VERSION#v}
           fi
-          bash steps/package_openmldb.sh $VERSION ${{ env.OS }}
+          bash steps/package_openmldb.sh "$VERSION" ${{ env.OS }}
 
       - name: upload artifacts
         if: ${{ github.event_name == 'push' }}
@@ -54,7 +58,7 @@ jobs:
 
       - name: run cpp
         run: |
-          bash steps/ut.sh
+          make test
 
       - name: upload unit test results
         if: always()
@@ -64,68 +68,38 @@ jobs:
           path: |
             reports/*.xml
 
-  sql_standalone_sdk_test:
+  sql_mode_sdk_test:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
+    strategy:
+      fail-fast: true
+      matrix:
+        test_target:
+          - sql_standalone_sdk_test
+          - sql_sdk_test
+          - sql_cluster_test
+    env:
+      OPENMLDB_BUILD_TARGE: ${{ matrix.test_target }}
+      TEST_TARGET: ${{ matrix.test_target }}
+      TESTING_ENABLE: ON
+      TEST_LEVEL: 0
     steps:
       - uses: actions/checkout@v2
-      - name: build
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_standalone_sdk_test && cd ../ || exit
-      - name: run sql_standalone_sdk_test
-        run: |
-          bash steps/ut.sh sql_standalone_sdk_test 0
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-sdk-${{ github.sha }}
-          path: |
-            reports/*.xml
-  sql_sdk_test:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-      - name: build
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_sdk_test && cd ../ || exit
-      - name: run sql_sdk_test
-        run: |
-          bash steps/ut.sh sql_sdk_test 0
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-sdk-${{ github.sha }}
-          path: |
-            reports/*.xml
 
-  sql_cluster_test:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-      - name: build
+      - name: configure and build
         run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_cluster_test && cd ../ || exit
-      - name: run sql_cluster_test
+          make build
+
+      - name: run test ${{ matrix.test_target }}
         run: |
-          bash steps/ut.sh sql_cluster_test 0
+          make test
+
       - name: upload unit test results
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: linux-ut-result-cpp-cluster-${{ github.sha }}
+          name: linux-ut-result-${{ env.TEST_TARGET }}-${{ github.sha }}
           path: |
             reports/*.xml
 
@@ -133,14 +107,16 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
+    env:
+      SQL_JAVASDK_ENABLE: ON
+      OPENMLDB_BUILD_TARGET: 'sql_javasdk_package openmldb'
     steps:
       - uses: actions/checkout@v2
 
       - name: build jsdk and package
         run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=ON -DTESTING_ENABLE=OFF .. && make -j$(nproc) sql_javasdk_package openmldb && cd ../ || exit
+          make build
+
       - name: run java modules smoke test
         run: |
           sh steps/ut_zookeeper.sh start
@@ -163,23 +139,23 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
+    env:
+      SQL_PYSDK_ENABLE: ON
+      OPENMLDB_BUILD_TARGET: 'sqlalchemy_openmldb openmldb'
     steps:
       - uses: actions/checkout@v2
+
       - name: build pysdk and sqlalchemy
+
         run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
-            bash steps/prepare_release.sh $VERSION
-          fi
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=ON -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=OFF .. && make -j$(nproc) sqlalchemy_openmldb openmldb && cd ../ || exit
+          make build
+
       - name: test sqlalchemy
         run: |
           python3 -m easy_install nose pip
           yum install -y net-tools
           bash steps/fesql_test_python.sh
+
       - name: upload python ut results
         if: always()
         uses: actions/upload-artifact@v2
@@ -187,6 +163,7 @@ jobs:
           name: linux-ut-result-python-${{ github.sha }}
           path: |
             python/test/nosetests.xml
+
       - name: upload pysdk and whl
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
@@ -197,7 +174,7 @@ jobs:
 
   publish-test-results:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
 
     # the action will only run on 4paradigm/OpenMLDB's context, not for fork repo or dependabot
     if: >
@@ -218,7 +195,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     # if test failed, shouldn't release
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -238,7 +215,7 @@ jobs:
   # only tag deploy, only run on 4paradigm/OpenMLDB's context?
   java-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     # java deploy is triggered with a push to main or a tag push
@@ -247,6 +224,8 @@ jobs:
     # see more in 'steps/package_openmldb_javasdk.sh'
     if: >
       success() && github.event_name == 'push'
+    env:
+      SQL_JAVASDK_ENABLE: ON
     steps:
       - uses: actions/checkout@v2
 
@@ -267,9 +246,9 @@ jobs:
 
       - name: upload to maven
         run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
+          make thirdparty
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=$(echo "$VERSION" | sed -e 's/^v//')
+          VERSION=${VERSION#v}
           ./steps/package_openmldb_javasdk.sh "$VERSION"
         env:
           # do not set user.home on macos
@@ -281,13 +260,15 @@ jobs:
   java-sdk-deploy-mac:
     runs-on: macos-latest
     # TODO(hw): needs ut on mac
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
     # java deploy is triggered with a push to main or a tag push
     # a 'vX.Y.Z' tag push will deploy a release version to maven central,
     # any other push will deploy a SNAPSHOT version.
     # see more in 'steps/package_openmldb_javasdk.sh'
     if: >
       success() && github.event_name == 'push'
+    env:
+      SQL_JAVASDK_ENABLE: ON
     steps:
       - uses: actions/checkout@v2
 
@@ -308,9 +289,9 @@ jobs:
 
       - name: upload to maven
         run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
+          make thirdparty
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=$(echo "$VERSION" | sed -e 's/^v//')
+          VERSION=${VERSION#v}
           ./steps/package_openmldb_javasdk.sh "$VERSION"
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
@@ -319,7 +300,7 @@ jobs:
 
   python-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
