--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -101,6 +101,7 @@ jobs:
 
       - name: Create Archive
         if: ${{ github.event_name == 'push' }}
+        working-directory: ${{ env.HYBRIDSE_PATH }}
         run: |
           if [[ "${{ github.ref }}" == "refs/tags/hybridse-v"* ]]; then
             VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
@@ -204,6 +205,7 @@ jobs:
 
       - name: Create Archive
         if: ${{ github.event_name == 'push' }}
+        working-directory: ${{ env.HYBRIDSE_PATH }}
         run: |
           if [[ "${{ github.ref }}" == "refs/tags/hybridse-v"* ]]; then
             VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
