--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -188,6 +188,13 @@
 			<version>360</version>
 		</dependency>
 
+		<!-- OpenMLDB -->
+		<dependency>
+			<groupId>com.4paradigm.openmldb</groupId>
+			<artifactId>openmldb-native</artifactId>
+			<version>0.4.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
