--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -16,6 +16,8 @@ hive.metastore.endpoint=thrift://127.0.0.1:9083
 batchjob.jar.path=hdfs:///Users/tobe/openmldb_batch_files/openmldb-batchjob-1.0-SNAPSHOT.jar
 #batchjob.jar.path=/Users/tobe/code/4pd/OpenMLDB/java/openmldb-batchjob/target/openmldb-batchjob-0.3.0.jar
 
+max.job.id=100
+
 # Spark Config
 #spark.master=yarn
 spark.master=local
