--- a/java/openmldb-taskmanager/src/test/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/test/resources/taskmanager.properties
@@ -3,9 +3,13 @@ server.port=9902
 server.worker_threads=4
 server.io_threads=4
 
-zookeeper.cluster=172.24.4.55:12200
+zookeeper.cluster=127.0.0.1:6181
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
+zookeeper.connection_Timeout=5000
+zookeeper.max_retries=10
+zookeeper.base_sleep_time=1000
+zookeeper.max_connect_waitTime=30000
 
 hive.metastore.endpoint=thrift://127.0.0.1:9083
 
@@ -15,3 +19,5 @@ batchjob.jar.path=
 spark.master=local
 spark.yarn.jars=
 spark.home=
+
+max.job.id=10
