--- a/java/openmldb-taskmanager/pom.xml
+++ b/java/openmldb-taskmanager/pom.xml
@@ -22,7 +22,7 @@
         <scala.binary.version>2.12</scala.binary.version>
         <spark.version>3.1.2</spark.version>
         <hadoop.version>2.8.5</hadoop.version>
-        <openmldb-common.version>0.3.2</openmldb-common.version>
+        <openmldb-common.version>0.4.0-SNAPSHOT</openmldb-common.version>
     </properties>
 
     <dependencies>
