--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -3,14 +3,14 @@ server.port=9902
 server.worker_threads=4
 server.io_threads=4
 
-zookeeper.cluster=172.24.4.55:12200
+zookeeper.cluster=127.0.0.1:2181
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
 
-hive.metastore.endpoint=thrift://127.0.0.1:9083
+zookeeper.leader.path=/taskmanager/leader
 
-batchjob.jar.path=hdfs:///Users/tobe/openmldb_batch_files/openmldb-batchjob-1.0-SNAPSHOT.jar
-#batchjob.jar.path=/Users/tobe/code/4pd/OpenMLDB/java/openmldb-batchjob/target/openmldb-batchjob-0.3.0.jar
+#batchjob.jar.path=hdfs:///Users/tobe/openmldb_batch_files/openmldb-batchjob-1.0-SNAPSHOT.jar
+batchjob.jar.path=/Users/tobe/code/4pd/OpenMLDB/java/openmldb-batchjob/target/openmldb-batchjob-0.4.0-SNAPSHOT.jar
 
 # Spark Config
 #spark.master=yarn
