Update binary script name and expose properties object in taskmanager config

--- a/java/openmldb-taskmanager/pom.xml
+++ b/java/openmldb-taskmanager/pom.xml
@@ -280,7 +280,7 @@
                     <programs>
                         <program>
                             <mainClass>com._4paradigm.openmldb.taskmanager.server.TaskManagerServer</mainClass>
-                            <name>TaskManagerServer</name>
+                            <name>taskmanager</name>
                         </program>
                     </programs>
                 </configuration>
