fix: fix python cicd

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -154,7 +154,7 @@ jobs:
         run: |
           python3 -m easy_install nose pip
           yum install -y net-tools
-          bash steps/fesql_test_python.sh
+          bash steps/test_python.sh
 
       - name: upload python ut results
         if: always()
