feat(like predicate): support MC LIKE PC

--- a/cases/plan/where_query.yaml
+++ b/cases/plan/where_query.yaml
@@ -307,7 +307,6 @@ cases:
           +-distinct_opt: false
           +-where_expr:
           |  +-expr[binary]
-          |    +-is_not: false
           |    +-LIKE[list]:
           |      +-0:
           |      |  +-expr[column ref]
@@ -341,7 +340,6 @@ cases:
           +-distinct_opt: false
           +-where_expr:
           |  +-expr[binary]
-          |    +-is_not: false
           |    +-LIKE[list]:
           |      +-0:
           |      |  +-expr[column ref]
@@ -372,7 +370,7 @@ cases:
           +-tableref_list: []
           +-window_list: []
 
-  - id: like_predicate_2
+  - id: like_predicate_3
     mode: request-unsupport
     sql: SELECT col1 WHERE col2 NOT LIKE '%k_' ESCAPE '&';
     expect:
@@ -380,23 +378,66 @@ cases:
         +-node[kQuery]: kQuerySelect
           +-distinct_opt: false
           +-where_expr:
-          |  +-expr[binary]
-          |    +-is_not: true
-          |    +-LIKE[list]:
+          |  +-expr[unary]
+          |    +-NOT[list]:
           |      +-0:
+          |        +-expr[binary]
+          |          +-LIKE[list]:
+          |            +-0:
+          |            |  +-expr[column ref]
+          |            |    +-relation_name: <nil>
+          |            |    +-column_name: col2
+          |            +-1:
+          |              +-expr[escape]
+          |                +-pattern:
+          |                |  +-expr[primary]
+          |                |    +-value: %k_
+          |                |    +-type: string
+          |                +-escape:
+          |                  +-expr[primary]
+          |                    +-value: &
+          |                    +-type: string
+          +-group_expr_list: null
+          +-having_expr: null
+          +-order_expr_list: null
+          +-limit: null
+          +-select_list[list]:
+          |  +-0:
+          |    +-node[kResTarget]
+          |      +-val:
           |      |  +-expr[column ref]
           |      |    +-relation_name: <nil>
-          |      |    +-column_name: col2
-          |      +-1:
-          |        +-expr[escape]
-          |          +-pattern:
-          |          |  +-expr[primary]
-          |          |    +-value: %k_
-          |          |    +-type: string
-          |          +-escape:
-          |            +-expr[primary]
-          |              +-value: &
-          |              +-type: string
+          |      |    +-column_name: col1
+          |      +-name: <nil>
+          +-tableref_list: []
+          +-window_list: []
+  - id: like_predicate_4
+    mode: request-unsupport
+    sql: SELECT col1 WHERE col2 NOT LIKE '%k_' ESCAPE '';
+    expect:
+      node_tree_str: |
+        +-node[kQuery]: kQuerySelect
+          +-distinct_opt: false
+          +-where_expr:
+          |  +-expr[unary]
+          |    +-NOT[list]:
+          |      +-0:
+          |        +-expr[binary]
+          |          +-LIKE[list]:
+          |            +-0:
+          |            |  +-expr[column ref]
+          |            |    +-relation_name: <nil>
+          |            |    +-column_name: col2
+          |            +-1:
+          |              +-expr[escape]
+          |                +-pattern:
+          |                |  +-expr[primary]
+          |                |    +-value: %k_
+          |                |    +-type: string
+          |                +-escape:
+          |                  +-expr[primary]
+          |                    +-value: <nil>
+          |                    +-type: string
           +-group_expr_list: null
           +-having_expr: null
           +-order_expr_list: null
